@@ -131,6 +131,54 @@ For every $\alpha\in\complexes$, $\alpha\neq 0$ there exists $\frac{1}{\alpha}\i
 </proof>
 </theorem>
 
+<p>Zero and one play special roles, of course, and especially zero.  Our first result is one we take for granted, but it requires a proof, derived from our nine properties.  You can compare it to its vector space counterparts, <acroref type="theorem" acro="ZSSM" /> and <acroref type="theorem" acro="ZVSM" />.</p>
+
+<theorem acro="ZPCN" index="complex numbers!zero product">
+<title>Zero Product, Complex Numbers</title>
+<statement>
+    <p>Suppose $\alpha\in\complexes$.  Then $0\alpha=0$.</p>
+</statement>
+
+<proof>
+<p><alignmath>
+0\alpha<![CDATA[&=]]>0\alpha+0<![CDATA[&&]]><acroref type="property" acro="ZCN" />\\
+<![CDATA[&=]]>0\alpha+\left(0\alpha-\left(0\alpha\right)\right)<![CDATA[&&]]><acroref type="property" acro="AICN" />\\
+<![CDATA[&=]]>\left(0\alpha+0\alpha\right)-\left(0\alpha\right)<![CDATA[&&]]><acroref type="property" acro="AACN" />\\
+<![CDATA[&=]]>\left(0+0\right)\alpha-\left(0\alpha\right)<![CDATA[&&]]><acroref type="property" acro="DCN" />\\
+<![CDATA[&=]]>0\alpha-\left(0\alpha\right)<![CDATA[&&]]><acroref type="property" acro="ZCN" />\\
+<![CDATA[&=]]>0<![CDATA[&&]]><acroref type="property" acro="AICN" />
+</alignmath></p>
+</proof>
+</theorem>
+
+<p>Our next theorem could be called <q>cancellation</q>, since it will make that possible.  Though you will never see us drawing slashes through parts of products.  We will also make very limited use of this result, or its vector space counterpart, <acroref type="theorem" acro="SMEZV" />.</p>
+
+<theorem acro="ZPZT" index="complex numbers!zero product">
+<title>Zero Product, Zero Terms</title>
+<statement>
+    <p>Suppose $\alpha,\beta\in\complexes$.  Then $\alpha\beta=0$ if and only if at least one of $\alpha=0$ or $\beta=0$.</p>
+</statement>
+
+<proof>
+    <p><implyforward />We conduct the forward argument in two cases.  First suppose that $\alpha=0$.  Then we are done.  (That was easy.)</p>
+
+<p>For the second case, suppose now that $\alpha\neq 0$. Then
+<alignmath>
+\beta<![CDATA[&=]]>1\beta<![CDATA[&&]]><acroref type="property" acro="OCN" />\\
+<![CDATA[&=]]>\left(\frac{1}{\alpha}\alpha\right)\beta<![CDATA[&&]]><acroref type="property" acro="MICN" />\\
+<![CDATA[&=]]>\frac{1}{\alpha}\left(\alpha\beta\right)<![CDATA[&&]]><acroref type="property" acro="MACN" />\\
+<![CDATA[&=]]>\frac{1}{\alpha}0<![CDATA[&&]]>\text{Hypothesis}\\
+<![CDATA[&=]]>0<![CDATA[&&]]><acroref type="theorem" acro="ZPCN" />
+</alignmath></p>
+
+<p><implyreverse />With two applications of <acroref type="theorem" acro="ZPCN" /> it is easy to see that if one of the scalars is zero, then so is the product.</p>
+
+</proof>
+</theorem>
+
+<p>As an equivalence (<acroref type="technique" acro="E" />), we could restate this result as the contrapositive (<acroref type="technique" acro="CP" />) by negating each statement, so it would read <q>$\alpha\beta\neq 0$ if and only if $\alpha\neq 0$ and $\beta\neq 0$.</q>  After you have learned more about nonsingular matrices and matrix multiplication, you should compare this result with <acroref type="theorem" acro="NPNT" />.</p>
+
+
 </subsection>
 
 <subsection acro="CCN">
