@@ -1,6 +1,7 @@
 v3.xx 2013//
 ~~~~~~~~~~~~~~~~
 New: Exercise ILT.T10, solution added
+New: Section CNO, Theorems ZPCN, ZPZT about zero divisors
 Edit: Clarified lead-in to Theorem PSSD (Michael DuBois)
 Edit: Example CAEHW, added an "and" (Anna Dovzhik)
 Edit: Example BDE, removed stale link (Anna Dovzhik)
